--- a/lib/jarbundler-2.2.0/build.xml
+++ b/lib/jarbundler-2.2.0/build.xml
@@ -1,6 +1,6 @@
 <project name="jarbundler" default="jar" basedir=".">
 
-  <property name="version" value="1.9"/>
+  <property name="version" value="2.2.0"/>
   <property name="description" value="ANT task for creating Mac OS X application bundles"/>    
 
 
@@ -10,8 +10,8 @@
   <property name="release.tar"    value="${ant.project.name}.tar" />
 
 
-  <!-- Needs to reference this in order to compile               -->
-  <!-- This path works for OS X, Windows and Linux must redefine -->
+  <!-- Needs to reference this in order to compile                     -->
+  <!-- This path works only for OS X, Windows, and Linux must redefine -->
   <property name="ant.jar" value="/Developer/Java/Ant/lib/ant.jar" />
 
    
@@ -19,8 +19,7 @@
     
     <mkdir dir="classes"/>
         
-    <javac srcdir="src" destdir="classes" source="1.4"
-           classpath="${ant.jar}"/>
+    <javac srcdir="src" destdir="classes" source="1.4" classpath="${ant.jar}"/>
   </target>
 
 
